--- a/dashboard/templates/base-sidebar.html
+++ b/dashboard/templates/base-sidebar.html
@@ -4,12 +4,12 @@
   <div id="sidebar">
     <ul id="navigation">
       {% block nav_home %}
-      <li><h3><a href="/">Home</a></h3></li>
+      <li class="first"><h3><a href="/">Home</a></h3></li>
       {% endblock %}
 
       {% block nav_projects %}
       <li><h3><a href="/">Projects</a></h3></li>
       {% endblock %}
    </ul>
-  </div> <!-- end sidebar -->
+  </div>
 {% endblock %}
