removed the extra 'or' text on the signin form

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -46,7 +46,7 @@
         <input type="hidden" name="next" value="/" />
         <div class="button">
           <input id="home_login_btn" type="submit" value="Sign In">
-          <span id="forgot_password">or <a id="forgot_password_link" href="{% url auth_password_reset %}">Forgot Password?</a></span>
+          <span id="forgot_password"><a id="forgot_password_link" href="{% url auth_password_reset %}">Forgot Password?</a></span>
         </div>
       </fieldset>
     </form>
