--- a/dashboard/templates/unavailable.html
+++ b/dashboard/templates/unavailable.html
@@ -6,6 +6,6 @@
 {% block content %}
   <div id="page_head">
     <h2 id="page_heading">Service Unavailable</h2>
-    <p id="page_description">This service is currently unavailable, please check back soon.</p>
+    <p id="page_description">This service is temporarily unavailable, please check back soon.</p>
   </div>
 {% endblock %}
