--- a/dashboard/templates/unavailable.html
+++ b/dashboard/templates/unavailable.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "base.html" %}
 
 {% block title %} - Service Unavailable{% endblock %}
 {% block pageclass %}unavailable{% endblock %}
@@ -6,6 +6,6 @@
 {% block content %}
   <div id="page_head">
     <h2 id="page_heading">Service Unavailable</h2>
-    <p id="page_description">This service is temporarily unavailable, please check back soon.</p>
+    <p id="page_description">This service is temporarily unavailable. Please check back soon.</p>
   </div>
 {% endblock %}
