Removed all Nebula references

--- a/dashboard/templates/registration/login.html
+++ b/dashboard/templates/registration/login.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div id="page_head">
-  <h2>Sign in to your Nebula Dashboard</h2>
+  <h2>Sign in to the OpenStack Dashboard</h2>
 </div>
 
 <div id="home_login" class="block">
