--- a/dashboard/templates/registration/password_reset_email.html
+++ b/dashboard/templates/registration/password_reset_email.html
@@ -1,7 +1,7 @@
 {% load i18n %}{% autoescape off %}
 You're receiving this e-mail because you requested a password reset for your user account at {{ site_name }}.
 
-Please sign in to your Nebula VPN and go to the following page and choose a new password:
+Please use the following link and choose a new password:
 {% block reset_link %}
 {{ protocol }}://{{ domain }}{% url django.contrib.auth.views.password_reset_confirm uidb36=uid token=token %}
 {% endblock %}
@@ -9,5 +9,5 @@ Your user name, in case you've forgotten: {{ user.username }}
 
 Thanks for using our site!
 
-The Nebula Team
+The OpenStack Team
 {% endautoescape %}
