--- a/media/dashboard/css/ie7.css
+++ b/media/dashboard/css/ie7.css
@@ -1,85 +1,15 @@
-#home_login input[type="submit"] { border: none !important; }
-#resources.block h3 {
-	width: 329px !important;
-}
-
-#frm_launch input[type="submit"]{
-	margin-right: -2px !important;
-}
-
-input.create, input.attach {
-  margin-right: -11px !important;
-}
-.dash_block .errorlist {
-  width: 282px !important;
-  padding-left: 20px !important;
-}
-
-#lnk_board, #lnk_wiki {
-  padding-top: 20px !important;
-}
-
-h1 a{position:relative !important;}
-
-#preview {
-  margin-top: -13px !important;
-}
-
-/*#projects .project.active {
-  height: 180px;
-  display: block;
-  filter: alpha(opacity=100);
-}
-
-#projects .project.inactive {
-  height: 0;
-  filter: alpha(opacity=0);
-}*/
-
-.ft_info {
-  margin-top: 0;
-  float: right;
-}
-
-#home_login .error, #home_login .errorlist {
-  background: #ef767d !important;
-  border-top: 1px solid #f63e42 !important;
-  border-bottom: 1px solid #f63e42 !important;
-  
-}
-
-#radar_service {margin-bottom: 50px !important; float: left;}
-
-#header h1 a sup {
-  margin-right: 0px;
-}
-
-#user_info ul li {
-  list-style: disc inside;
-  margin-bottom: 2px;
-}
-
+h1, h1 a, h1 span { position: relative !important; }
+#content_wrap {margin-top: 15px;}
 .image_detail, .instance_detail { position: relative; }
+td#actions {  padding-bottom: 10px !important; }
+td#actions input { width: 80px; }
+#edit_image_link:hover { color: #1d77ff; }
+input.private { margin-right: -30px !important; margin-left: -17px !important;}
+#user_info li { list-style: disc !important; }
+input.create, input.attach, input#launch_image { margin-right: 4px !important; }
 
-a.launch {
-  margin-left: 10px !important;
-  margin-top: 0px;
-}
-
-.image_detail a.launch {
-  margin-left: 31px !important;
-}
-
-a#edit_image_link, a#edit_instance_link {
-	margin-left: -40px;
-}
-
-.image_detail .image_privacy input, .image_detail .delete input {
-  margin-left: -15px;
-  margin-top: -10px;
-}
-
-.post_status {
-  width: 20px !important;
+#edit_image_link {
+	margin-left: -180px !important;
+	margin-top: 20px !important;
 }
 
