updating links for openstack resources section

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -54,8 +54,8 @@
       <h3>OpenStack Resources</h3>
       <ul>
         <li><a href="http://openstack.org" target="_blank">OpenStack.org</a></li>
-        <li><a href="http://" target="_blank">OpenStack Dashboard Launchpad Repository</a></li>
-        <li><a href="http://" target="_blank">Django-Nova Launchpad Repository</a></li>
+        <li><a href="https://launchpad.net/openstack-dashboard" target="_blank">OpenStack Dashboard Launchpad Repository</a></li>
+        <li><a href="https://launchpad.net/django-nova" target="_blank">Django-Nova Launchpad Repository</a></li>
       </ul>
     </div>
   {% endif %}
