--- a/media/dashboard/css/openstack.css
+++ b/media/dashboard/css/openstack.css
@@ -1,5 +1,3 @@
-/* @override http://looce.com:8080/media/dashboard/css/openstack.css */
-
 @import url("reset.css");
 
 /*==================
@@ -153,9 +151,8 @@ p .ui-icon {
 
 #content.home #projects {
 	float: left;
-	margin: 0 20px 0 0;
 	width: 445px;
-	
+	margin: 0 0 10px;
 }
 #content.home #projects li {
 	border-bottom: 1px solid #bce3ff;
@@ -272,7 +269,7 @@ span.data {
 	float: left;
 	margin-left: 25px;
 	padding: 25px;
-	background: #f5f5f5;
+	background: #f1f1f1;
 	margin-bottom: 25px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
