--- a/dashboard/templates/registration/login.html
+++ b/dashboard/templates/registration/login.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load django_nova_tags %}
-{% load_site_branding %}
 
 {% block region %}{% endblock %}
 
@@ -14,7 +13,7 @@
 
 {% block content %}
 <div id="page_head">
-  <h2>Sign in to the {{ site_branding }} Dashboard</h2>
+  <h2>Sign in to the {% site_branding %} Dashboard</h2>
 </div>
 
 <div id="home_login" class="block">
