--- a/dashboard/templates/registration/password_reset_email.html
+++ b/dashboard/templates/registration/password_reset_email.html
@@ -1,7 +1,7 @@
-{% load i18n %}{% load django_nova_tags %}{% load_site_branding %}
+{% load i18n %}{% load django_nova_tags %}
 {% autoescape off %}
 You're receiving this e-mail because you requested a password reset for your
-user account at {{ site_branding }}.
+user account at {% site_branding %}.
 
 Please use the following link and choose a new password:
 {% block reset_link %}
@@ -11,5 +11,5 @@ Your user name, in case you've forgotten: {{ user.username }}
 
 Thanks for using our site!
 
-The {{ site_branding }} Team
+The {% site_branding %} Team
 {% endautoescape %}
