Fix text on button for registration form.

--- a/dashboard/templates/registration/registration_form.html
+++ b/dashboard/templates/registration/registration_form.html
@@ -22,7 +22,7 @@
       <label for="id_password1">Password:</label> {{ form.password1 }}
       {{ form.password2.errors }}
       <label for="id_password2">Confirm Password:</label> {{ form.password2 }}
-      <input id="btn_reset_password" type="submit" value="Reset Password" />
+      <input id="btn_reset_password" type="submit" value="Register" />
     </fieldset>
   </form>
 </div>
