removing text artifact from nebula dashboard

--- a/django-nova/src/django_nova/templates/django_nova/images/launch.html
+++ b/django-nova/src/django_nova/templates/django_nova/images/launch.html
@@ -10,7 +10,7 @@
 <div id="right_content">
   <div id="page_head">
     <h2 id="page_heading">Launch Image</h2>
-    <p id="page_description">You can launch up to five instances of an image at a time. Some images allow for custom configuration to be passed in via User data. (<a href="/kb/show/UserData/">read more</a>)</p>
+    <p id="page_description">You can launch up to five instances of an image at a time. Some images allow for custom configuration to be passed in via User data.</p>
   </div>
 
   <div class="dash_block first">
