Detach volumes so they can be destroyed.

--- a/django-nova-syspanel/src/django_nova_syspanel/templates/django_nova_syspanel/index.html
+++ b/django-nova-syspanel/src/django_nova_syspanel/templates/django_nova_syspanel/index.html
@@ -12,7 +12,7 @@
 
 <div class="block">
   <h3 class="half-heading">Manage Volumes</h3>
-  <p>View all volumes. See size, status, and mount point. Destroy volumes.</p>
+  <p>View all volumes. See size, status, and mount point. Detach and destroy volumes.</p>
   <a class="more" href="{% url syspanel_volumes %}" >Manage Volumes &rarr;</a>
 </div>
 
