Added package_data attributes to django-nova and django-nova-syspanel to install templates with this packages. Fixed url displayed as "Sign In" (made it use url template tag). Little hack to login.html to make it redirect to index page even when Dashboard is accessed not from server's root. Removed ancient hack from django.wsgi. It was needed only for very old Django versions.

--- a/openstack-dashboard/dashboard/templates/registration/login.html
+++ b/openstack-dashboard/dashboard/templates/registration/login.html
@@ -25,7 +25,7 @@
       {% if form.errors %}
       <p class="error">Your username and password didn't match. Please try again.</p>
       {% endif %}
-      <input type="hidden" name="next" value="{{ next }}" />
+      <input type="hidden" name="next" value="{% if next %}{{ next }}{% else %}{% url index %}{% endif %}" />
       {{ form.username.label_tag }}{{ form.username }}
       {{ form.password.label_tag }}{{ form.password }}
       <div class="button">
