removing vnc button on instances

--- a/django-nova/src/django_nova/templates/django_nova/instances/_instances_list.html
+++ b/django-nova/src/django_nova/templates/django_nova/instances/_instances_list.html
@@ -53,8 +53,8 @@
 
                 <div id="last" class="column">
                   {% if instance.state == "running" %}
-                  <a href="{% url nova_instances_console project.projectname instance.id %}" id="console_{{instance.id}}" class="console" target="_blank">Show Console</a>
-<a href="{% url nova_instances_vnc project.projectname instance.id %}" id="vnc_{{instance.id}}" class="console" target="_blank">VNC</a>{% endif %}
+                    <a href="{% url nova_instances_console project.projectname instance.id %}" id="console_{{instance.id}}" class="console" target="_blank">Show Console</a>
+                  {% endif %}
                    <a id="edit_instance_link" href="{% url nova_instance_update project.projectname instance.id %}">Edit Instance</a>
 
 
