--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/_instances_list.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/_instances_list.html
@@ -1,7 +1,7 @@
       {% if instances %}
       <table style="width: 100%">
         <tr>
-          <th>ID</th>
+          <th>Name</th>
           <th>Image</th>
           <th>Size</th>
           <th>IP</th>
@@ -73,7 +73,7 @@
             </td>
           {% else %}
 
-            <td><a href="{% url nova_instances_detail project.projectname instance.id %}">{{ instance.id }} {% if instance.displayName %}({{ instance.displayName }}){% endif %}
+            <td><a href="{% url nova_instances_detail project.projectname instance.id %}">{% if instance.displayName %}{{ instance.displayName }}{% endif %} ({{ instance.id }})
               </a></td>
             <td class="odd">{{ instance.image_id }}</td>
             <td>{{ instance.instance_type }}</td>
