--- a/openstack-dashboard/dashboard/templates/500.html
+++ b/openstack-dashboard/dashboard/templates/500.html
@@ -5,8 +5,8 @@
 {% block content %}
   <div id="right_content">
     <div id="page_head">
-      <h2 id="page_heading">Internal Server Error</h2>
-      <p id="page_description">An unexpected error occurred while processing your request.  Please try your request again.</p>
+      <h2 id="page_heading">{% trans "Internal Server Error"%}</h2>
+      <p id="page_description">{% trans "An unexpected error occurred while processing your request.  Please try your request again."%}</p>
     </div>
   </div>
 {% endblock %}
