--- a/openstack-dashboard/dashboard/templates/index.html
+++ b/openstack-dashboard/dashboard/templates/index.html
@@ -9,9 +9,10 @@
 
 {% block content %}
   <div id="page_head">
-    <h2>Welcome to the {% site_branding %} Dashboard</h2>
-    <p>Through the {% site_branding %} Dashboard you can manage your cloud
-      through a crisp, clean, and easy to use interface.
+    {%blocktrans with brand=site_branding %}
+    <h2>Welcome to the {{brand}} Dashboard</h2>
+    <p>Through the {{brand}} Dashboard you can manage your cloud
+      through a crisp, clean, and easy to use interface. {%endblocktrans%}
       {% if not request.user.is_authenticated%}To get started
       <a href="{% url registration_register %}">register</a> or sign in below.{% endif %}
     </p>
@@ -36,8 +37,8 @@
     <h3>OpenStack Resources</h3>
     <ul>
       <li><a href="http://openstack.org" target="_blank">OpenStack.org</a></li>
-      <li><a href="http://wiki.openstack.org/OpenStackDashboard" target="_blank">OpenStack Dashboard Wiki</a></li>
-      <li><a href="https://launchpad.net/openstack-dashboard" target="_blank">OpenStack Dashboard Launchpad Repository</a></li>
+      <li><a href="http://wiki.openstack.org/OpenStackDashboard" target="_blank">{% trans "OpenStack Dashboard Wiki"%}</a></li>
+      <li><a href="https://launchpad.net/openstack-dashboard" target="_blank">{% trans "OpenStack Dashboard Launchpad Repository"%}</a></li>
     </ul>
   </div>
 
@@ -48,14 +49,14 @@
         {% csrf_token %}
         <fieldset>
           {% if form.errors %}
-          <p class="error">Your username and password didn't match. Please try again.</p>
+          <p class="error">{% trans "Your username and password didn't match. Please try again." %}</p>
           {% endif %}
           <label for="username">Username:</label><input id="username" type="text" name="username" />
           <label for="password">Password:</label><input id="password" type="password" name="password" />
           <input type="hidden" name="next" value="/" />
           <div class="button">
             <input id="home_login_btn" type="submit" value="Sign In">
-            <span id="forgot_password"><a id="forgot_password_link" href="{% url auth_password_reset %}">Forgot Password?</a></span>
+            <span id="forgot_password"><a id="forgot_password_link" href="{% url auth_password_reset %}">{% trans "Forgot Password?"%}</a></span>
           </div>
         </fieldset>
       </form>
@@ -70,8 +71,8 @@
       <h3>OpenStack Resources</h3>
       <ul>
         <li><a href="http://openstack.org" target="_blank">OpenStack.org</a></li>
-        <li><a href="http://wiki.openstack.org/OpenStackDashboard" target="_blank">OpenStack Dashboard Wiki</a></li>
-        <li><a href="https://launchpad.net/openstack-dashboard" target="_blank">OpenStack Dashboard Launchpad Repository</a></li>
+        <li><a href="http://wiki.openstack.org/OpenStackDashboard" target="_blank">{% trans "OpenStack Dashboard Wiki"%}</a></li>
+        <li><a href="https://launchpad.net/openstack-dashboard" target="_blank">{% trans "OpenStack Dashboard Launchpad Repository"%}</a></li>
       </ul>
     </div>
   {% endif %}
