--- a/openstack-dashboard/dashboard/templates/permission_denied.html
+++ b/openstack-dashboard/dashboard/templates/permission_denied.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %} - Permission Denied{% endblock %}
+{% block title %} - {% trans "Permission Denied"%}{% endblock %}
 
 {% block content %}
   <div id="right_content">
     <div id="page_head">
-      <h2 id="page_heading">Permission Denied</h2>
-      <p id="page_description">You do not have permission to view the requested page.</p>
+      <h2 id="page_heading">{% trans "Permission Denie"%}d</h2>
+      <p id="page_description">{% trans "You do not have permission to view the requested page."%}</p>
     </div>
   </div>
 {% endblock %}
