--- a/openstack-dashboard/dashboard/templates/unavailable.html
+++ b/openstack-dashboard/dashboard/templates/unavailable.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %} - Service Unavailable{% endblock %}
+{% block title %} - {% trans "Service Unavailable"%}{% endblock %}
 {% block pageclass %}unavailable{% endblock %}
 
 {% block content %}
   <div id="page_head">
-    <h2 id="page_heading">Service Unavailable</h2>
-    <p id="page_description">This service is temporarily unavailable. Please check back soon.</p>
+    <h2 id="page_heading">{% trans "Service Unavailable"%}</h2>
+    <p id="page_description">{% trans "This service is temporarily unavailable. Please check back soon."%}</p>
   </div>
 {% endblock %}
