--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/keypairs/_list.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/keypairs/_list.html
@@ -24,7 +24,7 @@
           <div class="ui-state-highlight ui-corner-all">
             <p>
               <span class="ui-icon ui-icon-info"></span>
-              No key pairs currently exist.
+              {% trans "No key pairs currently exist."%}
             </p>
           </div>
         </div>
