--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/credentials/expired.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/credentials/expired.html
@@ -3,15 +3,15 @@
 <html lang="en" xml:lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Expired Token</title>
+    <title>{% trans "Expired Token" %}</title>
   </head>
   <body>
     <center>
-      <h1>The link you clicked has expired.</h1>
-      <p style="width:460px;">This credentials download link you have reached
+      <h1>{% trans "The link you clicked has expired." %}</h1>
+      <p style="width:460px;">{%blocktrans with brand=site_branding %}This credentials download link you have reached
       is either invalid or has expired. Each link is only good for one use. If
       you need to download your credentials again, please contact the
-      {% site_branding %} support team.</p>
+      {{brand}} support team.{%endblocktrans%}</p>
    </center>
   </body>
 </html>
