--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/images/_list.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/images/_list.html
@@ -66,9 +66,9 @@
                   <form id="privacy_{{ ami.id }}" action="{% url nova_images_privacy project.projectname ami.id %}" method="post" accept-charset="utf-8">
                     {% csrf_token %}
                     {% if ami.is_public %}
-                      <input class="private" type="submit" value="Make Private" />
+                      <input class="private" type="submit" value="{% trans "Make Private" %}" />
                     {% else %}
-                      <input class="public" type="submit" value="Make Public" />
+                      <input class="public" type="submit" value="{% trans "Make Public" %}" />
                     {% endif %}
                   </form>
                 </span>
@@ -76,7 +76,7 @@
                 <span class="delete">
                   <form id="delete_{{ ami.id }}" action="{% url nova_images_remove project.projectname ami.id %}" method="post" accept-charset="utf-8">
                     {% csrf_token %}
-                    <input type="submit" value="Remove Image" />
+                    <input type="submit" value="{% trans "Remove Image" %}" />
                   </form>
                 </span>
               {% endif %}              
@@ -106,7 +106,7 @@
       <div class="ui-state-highlight ui-corner-all">
         <p>
           <span class="ui-icon ui-icon-info"></span>
-          No images currently available.
+          {% trans "No images currently available." %}
         </p>
       </div>
     </div>
