--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/_instances_list.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/_instances_list.html
@@ -98,7 +98,7 @@
         <div class="ui-state-highlight ui-corner-all">
           <p>
             <span class="ui-icon ui-icon-info"></span>
-            No instances are currently running. You may start a new instance from the <a href="{% url nova_images project.projectname %}">images</a> tab.
+            {% trans "No instances are currently running. You may start a new instance from the"%} <a href="{% url nova_images project.projectname %}">images</a> tab.
           </p>
         </div>
       </div>
