--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/performance.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/performance.html
@@ -6,8 +6,8 @@
 
 <div id="right_content">
   <div id="page_head">
-    <h2 id="page_heading">Instance ID: {{ instance.id }} Performance</h2>
-    <p id="page_description">Here you can see up to the minute performance data about your instance.</p>
+    <h2 id="page_heading">{% blocktrans %}Instance ID: {{ instance.id }} Performance" {%endblocktrans%}</h2>
+    <p id="page_description">{% trans Here you can see up to the minute performance data about your instance." %}</p>
   </div>
 
   {% include "django_openstack/_messages.html" %}
