--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/projects/manage.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/projects/manage.html
@@ -4,8 +4,8 @@
 
 {% block content %}
   <div id="page_head">
-    <h2 id="page_heading">Manage Users and Roles</h2>
-    <p id="page_description">From here you can manage users and roles.</p>
+    <h2 id="page_heading">{% trans "Manage Users and Roles" %}</h2>
+    <p id="page_description">{% trans "From here you can manage users and roles." %}</p>
   </div>
 
   {% include "django_openstack/_messages.html" %}
@@ -35,7 +35,7 @@
       <div class="ui-state-highlight ui-corner-all">
         <p>
           <span class="ui-icon ui-icon-info"></span>
-          No users are currently associated with this project.
+          {% trans "No users are currently associated with this project." %}
         </p>
       </div>
     </div>
