--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/securitygroups/detail.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/securitygroups/detail.html
@@ -15,8 +15,8 @@
       </ul>
       <div id="right_content">
         <div id="page_head">
-          <h2>Security Group: {{ securitygroup.name }}</h2>
-          <p>Add and remove protocols to the security group by authorizing and revoking port forwarding. For instance<br /> [tcp, 80, 80] will allow access to HTTP from devices outside this security group.</p>
+          <h2>{% blocktrans %} Security Group: {{ securitygroup.name }} {%endblocktrans%}</h2>
+          <p>{% trans "Add and remove protocols to the security group by authorizing and revoking port forwarding. For instance<br /> [tcp, 80, 80] will allow access to HTTP from devices outside this security group."%}</p>
         </div>
 
         {% include "django_openstack/_messages.html" %}
