added translation tags to django nova syspanel templates

--- a/django-nova-syspanel/src/django_nova_syspanel/templates/django_nova_syspanel/volumes/index.html
+++ b/django-nova-syspanel/src/django_nova_syspanel/templates/django_nova_syspanel/volumes/index.html
@@ -19,8 +19,8 @@
 
 {% block content %}
   <div id="page_description">
-    <h2 class="page_heading">Manage Volumes</h2>
-		<p>View all volumes. See size, status, and mount point. Detach and destroy volumes.</p>
+    <h2 class="page_heading">{% trans "Manage Volumes" %}</h2>
+		<p>{% trans "View all volumes. See size, status, and mount point. Detach and destroy volumes." %}</p>
   </div>
 
   <table>
