--- a/django-nova-syspanel/src/django_nova_syspanel/templates/django_nova_syspanel/cloudview/index.html
+++ b/django-nova-syspanel/src/django_nova_syspanel/templates/django_nova_syspanel/cloudview/index.html
@@ -5,8 +5,7 @@
 {% block content %}
   <div id="page_description">
     <h2 class="page_heading">Cloud View</h2>
-		<p>View servers that participate in your cloud.  See statistics about
-		running services and served objects.</p>
+		<p>{% trans "View servers that participate in your cloud.  See statistics about running services and served objects." %}</p>
   </div>
           
 
