Corrected bugs introduced in internationalization

--- a/django-openstack/src/django_openstack/templates/admin/django_openstack/nova/project/project_user.html
+++ b/django-openstack/src/django_openstack/templates/admin/django_openstack/nova/project/project_user.html
@@ -1,5 +1,5 @@
 {% extends "admin/django_openstack/nova/project/base_projects.html" %}
-{% load admin_modify adminmedia %}
+{% load admin_modify adminmedia i18n %}
 
 {% block extrahead %}
 {{ block.super }}
