--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/index.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/index.html
@@ -1,4 +1,5 @@
 {% extends "django_openstack/nova/instances/base.html" %}
+{% load i18n %}
 
 {% block title %} - {{ project.projectname|capfirst }} Instances{% endblock %}
 {% block pageclass %}instances{% endblock %}
