--- a/django-nova-syspanel/src/django_nova_syspanel/templates/django_nova_syspanel/security/index.html
+++ b/django-nova-syspanel/src/django_nova_syspanel/templates/django_nova_syspanel/security/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block breadcrumb %}{{ block.super }}<li><a href="{% url syspanel_security %}">Security</a></li>{% endblock %}
 
