--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/projects/edit_user.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/projects/edit_user.html
@@ -1,4 +1,5 @@
 {% extends "django_openstack/nova/base.html" %}
+{% load i18n %}
 {% block title %} - {{ project.projectname|capfirst }} Overview{% endblock %}
 {% block pageclass %}overview{% endblock %}
 
