--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/securitygroups/detail.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/securitygroups/detail.html
@@ -1,4 +1,5 @@
 {% extends "django_openstack/nova/securitygroups/base.html" %}
+{% load i18n %}
 
 {% block title %} - Cloud Computing{% endblock %}
 
