--- a/openstack-dashboard/dashboard/templates/base-root.html
+++ b/openstack-dashboard/dashboard/templates/base-root.html
@@ -1,5 +1,4 @@
-{% load django_openstack_tags %}
-{% load i18n %}
+{% load django_openstack_tags i18n %}
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
   <head>
