--- a/openstack-dashboard/dashboard/templates/unavailable.html
+++ b/openstack-dashboard/dashboard/templates/unavailable.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block title %} - {% trans "Service Unavailable"%}{% endblock %}
 {% block pageclass %}unavailable{% endblock %}
