--- a/openstack-dashboard/dashboard/templates/index.html
+++ b/openstack-dashboard/dashboard/templates/index.html
@@ -34,21 +34,25 @@
   </div>
 
   <div class="home_block">
-    <form action="/i18n/setlang/" method="post"> {% csrf_token %}
-      <select name="language">
-      {% get_language_info_list for LANGUAGES as languages %}
-      {% for language in languages %}
-        <option value="{{ language.code }}">{{ language.name_local }} ({{ language.code }})</option>
-      {% endfor %}
-      </select>
-      <input type="submit" value="Go" />
-    </form>
     <h3>OpenStack Resources</h3>
     <ul>
       <li><a href="http://openstack.org" target="_blank">OpenStack.org</a></li>
       <li><a href="http://wiki.openstack.org/OpenStackDashboard" target="_blank">{% trans "OpenStack Dashboard Wiki"%}</a></li>
       <li><a href="https://launchpad.net/openstack-dashboard" target="_blank">{% trans "OpenStack Dashboard Launchpad Repository"%}</a></li>
     </ul>
+    <form action="/i18n/setlang/" method="post"> {% csrf_token %}
+      <p><select name="language">
+      {% get_language_info_list for LANGUAGES as languages %}
+      {% for language in languages %}
+          {% if language.code == LANGUAGE_CODE %}
+             <option selected value="{{ language.code }}">{{ language.name_local }} ({{ language.code }})</option>
+          {%else%}
+              <option value="{{ language.code }}">{{ language.name_local }} ({{ language.code }})</option>
+          {%endif%}
+      {% endfor %}
+      </select></p>
+      <input type="submit" value="Select Language" />
+    </form>
   </div>
 
   {% else %}
