Finished openstack-dashboard/dashboard localization into Japanese

--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/credentials/expired.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/credentials/expired.html
@@ -8,7 +8,8 @@
   <body>
     <center>
       <h1>{% trans "The link you clicked has expired." %}</h1>
-      <p style="width:460px;">{%blocktrans with brand=site_branding %}This credentials download link you have reached
+      {%save_site_branding as brand%}
+      <p style="width:460px;">{%blocktrans%}This credentials download link you have reached
       is either invalid or has expired. Each link is only good for one use. If
       you need to download your credentials again, please contact the
       {{brand}} support team.{%endblocktrans%}</p>
