--- a/openstack-dashboard/dashboard/templates/permission_denied.html
+++ b/openstack-dashboard/dashboard/templates/permission_denied.html
@@ -6,7 +6,7 @@
 {% block content %}
   <div id="right_content">
     <div id="page_head">
-      <h2 id="page_heading">{% trans "Permission Denie"%}d</h2>
+      <h2 id="page_heading">{% trans "Permission Denied"%}</h2>
       <p id="page_description">{% trans "You do not have permission to view the requested page."%}</p>
     </div>
   </div>
