--- a/openstack-dashboard/dashboard/templates/index.html
+++ b/openstack-dashboard/dashboard/templates/index.html
@@ -9,10 +9,10 @@
 
 {% block content %}
   <div id="page_head">
-    {%blocktrans with brand=site_branding %}
-    <h2>Welcome to the {{brand}} Dashboard</h2>
-    <p>Through the {{brand}} Dashboard you can manage your cloud
-      through a crisp, clean, and easy to use interface. {%endblocktrans%}
+    {%save_site_branding as site_brand%}
+    {%blocktrans%}<h2>Welcome to the {{site_brand}} Dashboard</h2>{%endblocktrans%}
+    <p>{%blocktrans%}Through the {{site_brand}} Dashboard you can manage your cloud
+      through a crisp, clean, and easy to use interface.{%endblocktrans%}
       {% if not request.user.is_authenticated%}To get started
       <a href="{% url registration_register %}">register</a> or sign in below.{% endif %}
     </p>
