Japanese Localization of django-openstack

--- a/django-openstack/src/django_openstack/templates/admin/django_openstack/nova/project/send_credentials.html
+++ b/django-openstack/src/django_openstack/templates/admin/django_openstack/nova/project/send_credentials.html
@@ -44,7 +44,7 @@
 
   {% if not success %}
   <h1>{% trans "Send Credentials"%}</h1>
-  <h3>{% trans "Select which users you would like to send credentials to from the '{{ project.projectname }}' project."%}</h3>
+  <h3>{%blocktrans with proj=project.projectname%}"Select which users you would like to send credentials to from the '{{proj}}' project."{%endblocktrans%}</h3>
   {% else %}
     <h1>{% trans "Credentials sent successfully"%}</h1>
   {% endif %}
