--- a/openstack-dashboard/dashboard/templates/admin/index.html
+++ b/openstack-dashboard/dashboard/templates/admin/index.html
@@ -1,5 +1,5 @@
 {% extends "admin/base_site.html" %}
-{% load django_openstack_tags i18n %}
+{% load branding i18n %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% load adminmedia %}{% admin_media_prefix %}css/dashboard.css" />{% endblock %}
 
