get login page loading

--- a/openstack-dashboard/dashboard/templates/base-root.html
+++ b/openstack-dashboard/dashboard/templates/base-root.html
@@ -30,7 +30,7 @@
           </div>
         {% else %}
           <div id="user_info">
-            <a id="lnk_login" href="{% url auth_login %}">{% trans "Sign In"%}</a>
+            <a id="lnk_login" href="{% url auth_token %}">{% trans "Sign In"%}</a>
           </div>
         {% endif %}
       </div>
