--- a/openstack-dashboard/dashboard/templates/_login.html
+++ b/openstack-dashboard/dashboard/templates/_login.html
@@ -1,4 +1,4 @@
-{% extends 'django_openstack/auth/_login.html' %}
+{% extends 'auth/_login.html' %}
 {% block submit %}
   <input type="hidden" name="next" value="/" />
   <div class="button">
